Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-35420

Server aborts while deleting the record in spatial index

    XMLWordPrintable

Details

    Description

      After upgrading our DB servers from 10.11 to 11.4 and running this fine (exact same config) for almost 48 hours, we are now experiencing frequent crashes on one of our servers

      I'm aware some of these options are not having any effect in 11.4, but these are our current configs:

      socket=/dbStore/mysql/mysql.sock
      default_storage_engine=InnoDB
      innodb_file_per_table=1
      innodb_buffer_pool_size=22500M
      table_open_cache=15000
      open_files_limit=36000
      max_connections=6000
      join_buffer_size=512K
      tmp_table_size=32M
      max_heap_table_size=32M
      tmpdir=/dbStore/mysqlTmp/
      innodb_data_home_dir=/dbStore/mysql/ibdata
      innodb_buffer_pool_instances=4
      innodb_flush_log_at_trx_commit=2
      innodb_log_file_size=750M
      lower_case_table_names=1
      datadir=/dbStore/mysql/data
      

      We've attempted to install debug symbols, but the printed stacktrace reads like greek to us anyhow:

      241114 14:12:49 [ERROR] mysqld got signal 11 ;
      Sorry, we probably made a mistake, and this is a bug.
       
      Your assistance in bug reporting will enable us to fix this for the next release.
      To report this bug, see https://mariadb.com/kb/en/reporting-bugs
       
      We will try our best to scrape up some info that will hopefully help
      diagnose the problem, but since we have already crashed,
      something is definitely wrong and this may fail.
       
      Server version: 11.4.4-MariaDB-ubu2404-log source revision: e9a502df08bad16aa8a354e854f3c014b1380e32
      key_buffer_size=134217728
      read_buffer_size=131072
      max_used_connections=86
      max_threads=6002
      thread_count=86
      It is possible that mysqld could use up to
      key_buffer_size + (read_buffer_size + sort_buffer_size)*max_threads = 13352091 K  bytes of memory
      Hope that's ok; if not, decrease some variables in the equation.
       
      Thread pointer: 0x6395c27f8228
      Attempting backtrace. You can use the following information to find out
      where mysqld died. If you see no messages after this, something went
      terribly wrong...
      stack_bottom = 0x749383401000 thread_stack 0x49000
      Printing to addr2line failed
      /usr/sbin/mariadbd(my_print_stacktrace+0x32)[0x6395bed77822]
      /usr/sbin/mariadbd(handle_fatal_signal+0x2c3)[0x6395be822603]
      /lib/x86_64-linux-gnu/libc.so.6(+0x45320)[0x7498da845320]
      /usr/sbin/mariadbd(+0xff0761)[0x6395becf3761]
      /usr/sbin/mariadbd(+0xf489cd)[0x6395bec4b9cd]
      /usr/sbin/mariadbd(+0xf5ebfb)[0x6395bec61bfb]
      /usr/sbin/mariadbd(+0xf6482e)[0x6395bec6782e]
      /usr/sbin/mariadbd(+0xef29cd)[0x6395bebf59cd]
      /usr/sbin/mariadbd(+0xef2d41)[0x6395bebf5d41]
      /usr/sbin/mariadbd(+0xef4085)[0x6395bebf7085]
      /usr/sbin/mariadbd(+0xeb6faa)[0x6395bebb9faa]
      /usr/sbin/mariadbd(+0xf14567)[0x6395bec17567]
      /usr/sbin/mariadbd(_ZN5tpool10task_group7executeEPNS_4taskE+0x7c)[0x6395bed0b1cc]
      /usr/sbin/mariadbd(_ZN5tpool19thread_pool_generic11worker_mainEPNS_11worker_dataE+0x5f)[0x6395bed0975f]
      /lib/x86_64-linux-gnu/libstdc++.so.6(+0xecdb4)[0x7498dacecdb4]
      /lib/x86_64-linux-gnu/libc.so.6(+0x9ca94)[0x7498da89ca94]
      /lib/x86_64-linux-gnu/libc.so.6(+0x129c3c)[0x7498da929c3c]
       
      Trying to get some variables.
      Some pointers may be invalid and cause the dump to abort.
      Query (0x0): (null)
      Connection ID (thread ID): 0
      Status: NOT_KILLED
       
      Optimizer switch: index_merge=on,index_merge_union=on,index_merge_sort_union=on,index_merge_intersection=on,index_merge_sort_intersection=off,index_condition_pushdown=on,derived_merge=on,derived_with_keys=on,firstmatch=on,loosescan=on,materialization=on,in_to_exists=on,semijoin=on,partial_match_rowid_merge=on,partial_match_table_scan=on,subquery_cache=on,mrr=off,mrr_cost_based=off,mrr_sort_keys=off,outer_join_with_cache=on,semijoin_with_cache=on,join_cache_incremental=on,join_cache_hashed=on,join_cache_bka=on,optimize_join_buffer_size=on,table_elimination=on,extended_keys=on,exists_to_in=on,orderby_uses_equalities=on,condition_pushdown_for_derived=on,split_materialized=on,condition_pushdown_for_subquery=on,rowid_filter=on,condition_pushdown_from_having=on,not_null_range_scan=off,hash_join_cardinality=on,cset_narrowing=off,sargable_casefold=on
       
      The manual page at https://mariadb.com/kb/en/how-to-produce-a-full-stack-trace-for-mariadbd/ contains
      information that should help you find out what is causing the crash.
       
      We think the query pointer is invalid, but we will try to print it anyway.
      Query:
       
      Writing a core file...
      Working directory at /dbStore/mysql/data
      Resource Limits:
      Limit                     Soft Limit           Hard Limit           Units
      Max cpu time              unlimited            unlimited            seconds
      Max file size             unlimited            unlimited            bytes
      Max data size             unlimited            unlimited            bytes
      Max stack size            8388608              unlimited            bytes
      Max core file size        0                    unlimited            bytes
      Max resident set          unlimited            unlimited            bytes
      Max processes             128347               128347               processes
      Max open files            32768                32768                files
      Max locked memory         524288               524288               bytes
      Max address space         unlimited            unlimited            bytes
      Max file locks            unlimited            unlimited            locks
      Max pending signals       128347               128347               signals
      Max msgqueue size         819200               819200               bytes
      Max nice priority         0                    0
      Max realtime priority     0                    0
      Max realtime timeout      unlimited            unlimited            us
      Core pattern: |/usr/share/apport/apport -p%p -s%s -c%c -d%d -P%P -u%u -g%g -- %E
       
      Kernel version: Linux version 6.8.0-1017-azure (buildd@lcy02-amd64-065) (x86_64-linux-gnu-gcc-13 (Ubuntu 13.2.0-23ubuntu4) 13.2.0, GNU ld (GNU Binutils for Ubuntu) 2.42) #20-Ubuntu SMP Tue Oct 22 03:43:13 UTC 2024
      

      Attachments

        Issue Links

          Activity

            People

              thiru Thirunarayanan Balathandayuthapani
              oyvindf Øyvind Flatval
              Votes:
              0 Vote for this issue
              Watchers:
              7 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.